[package]
name = "riffle"
description = "A terminal pager library"
version = "0.2.0"
categories = ["command-line-interface"]
homepage = "https://github.com/sharkdp/riffle"
repository = "https://github.com/sharkdp/riffle"
authors = ["David Peter <mail@david-peter.de>"]
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
crossterm = "0.22"

[dev-dependencies]
bat = "0.19"

[[bin]]
name = "riffle"
path = "src/app/main.rs"
